Up ui prod version

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:DfqVnLyI,iv:0nTCCIq8qbzwGK4z4G4quqErbvbsgzooaU+1eVLaVSU=,tag:Qyte9c9AZIHIxgHnQWVdRg==,type:str]
-    repository: ENC[AES256_GCM,data:s1I278DApjZHkYhIX0YgMing63uHYKoHHWHsl3fbf83JWoHZO+E=,iv:uqEMum1v8Rl4qiLS4J/ntk2UqRb2NMQLAbYOqalnImo=,tag:Je466cQApy+HOAunAqvAQQ==,type:str]
+    tag: ENC[AES256_GCM,data:e2G/zaa+,iv:INpwtjpD83/0+zWmIuLyhn8mS+w/kFxF7kv8wkhzuds=,tag:WmaO4t5d5NsKr5Evy+Sr8Q==,type:str]
+    repository: ENC[AES256_GCM,data:rifMAKFW/mieU5Xk9l4dpvv6qzcOIvrHzK/v8tkbXZtl42wKTwc=,iv:FcgMB+NIPKr1jcrs9fZQYYc9PRxYL9JAKfNioLoJQZ8=,tag:FCNZUS52yorZyQ+wvFZ9Lg==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:k8GK6A==,iv:oJ4LDnAexXgiOaVzD+ZV+XznC8yhLaL1eaxIR9GTw5A=,tag:fa2yLEgmEOzuX0KHI/PwcA==,type:bool]
+    enabled: ENC[AES256_GCM,data:1JDu3g==,iv:w0MvkjgyTonsWoUEMTooxgGucHXacIr1AaULdpOhcWM=,tag:mSKeuGUddmtiVDyXpm8vdQ==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:D+eor0ORtnA8pm21+yfzmMjDArU=,iv:5hmFenju5Vcxfh+60oWKPpWgGYft7a+OyFXz9HcCxfg=,tag:mU8iYclSurIwEXzIrDCW2A==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:dEvi9v6iSZhXaQ7q,iv:lo2GzJ7fOmnzA0GXBcfjTZvF+z2ZnpN0PIt9nvtzua4=,tag:SmIr2nOkC65yluGPBWG5AA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:hLpCwrgl6cNv+sMm,iv:E8TOteB86+b5uf92xUIgJ2MI8yPUyNwAjEIHcmdgP24=,tag:Qwq8FKV4Cr+vDzrlW1DE2w==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:yoCAuo6qogPz9rYfFqrRtbS3nxE=,iv:deiJuvMBEdhMVuidfK6EdIXIWvb31kKN0/gXIFUlIsM=,tag:+aExl4h0QcZ/kg20Zvw+EQ==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:Gq8YDV5+N23J8hr58pz/c1UoU5k=,iv:y8r1UTgXXmUpMZ6uD0YDMzj9oYyiWQ7n36kXX9sFyJE=,tag:JrxULtqo2/EpTEw2lvFa3g==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:eB6txFr/gAF6Diby,iv:6Q6qk0E2Xo82AOnBUfQJL3NAwDgnsK8bHjTwWvY2GM4=,tag:kRogokJu7DMTZoZOVBrMIA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:IOG1Ln8v5oInqX+j,iv:U+HDp/FJb+Tc3a4UIROeVxvdBXNFN6Aybyao5tigj+w=,tag:HStrKzdyRYGcW93sweKTSA==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:eeP/Kxa4lkv5KSZ1gAEnp/qywqI=,iv:3xUqxm/7ZDoXx23Zmx1zOqPYe7CR821n8lmru+EDBqA=,tag:ZB2szfQOy3O32U0KKxTBZA==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:Cwcexcf820K1aBzoQjLmwu+P0EpWq03/43rWFrs=,iv:dXuyAbk8ZpY6XGKabaEkOZO5/f2eseaMoW01fSZXK68=,tag:IRKRPpfd0ulLYuWaiyvkUQ==,type:str]
+        - host: ENC[AES256_GCM,data:e3n/UdOiHYO39d7W/UVygUCc/TRBOIrLaNVKWn4=,iv:kJuvaKMSi6me1tZP3bJArSf8Ysbyw0GRVjRw2DCHGnw=,tag:55+tf/3Kp9Xv2wz1UzWnhQ==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:cQ==,iv:hqbGMGGaD9X7Jt/pd8iBj0Z8MRewLrsJ+Q1o7ZeDlNM=,tag:MSCfomof5BOxtanAS9TmeQ==,type:str]
-              pathType: ENC[AES256_GCM,data:q3PDoquzVygd1edr+uEiC2tg7jKQTA==,iv:yf+62L+xGr9Fucjhg80UfSYDLwk5ktmIYIhLrWR8sgw=,tag:8PbfWZlQ1ZioIF4h4RslFw==,type:str]
+            - path: ENC[AES256_GCM,data:Mg==,iv:HR+NFuGavXcNip0Zfn1g6YAg8XbXKgL5WywzRtsPG6Q=,tag:FEV3m8xi9goh578ueHNC6A==,type:str]
+              pathType: ENC[AES256_GCM,data:PCO6YZgVuhp4hGdqCJqfxN6XKoixIA==,iv:tMw750nh3pknV7ny+6rEYW3/90QjN8f3330FYO3fumI=,tag:Ac2lRU7inI40xKEGFsPemg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:OvGr6KkRWgpWFIAfMhb8uZwYkd2BdOAkDl64nSo=,iv:zKCerJpGcIALEgJKpz1qrnUDOcfHLLx1FPwjXcTKe48=,tag:H0VMNPFIjiuV6j+GM8T9Mg==,type:str]
-          secretName: ENC[AES256_GCM,data:JoyKL+oIWs8MUEoZ2svlHb2bbZJgLPBsrxRDqepLiFViv1KXr8yJ,iv:N3GBk9YYdmVNqgHCbuZI61vtf5c+PrDsG3snzix4tYs=,tag:oMOv28CxC4PJXhUzAPUsuw==,type:str]
+            - ENC[AES256_GCM,data:Q5PGcWrudE6twIRbXXhbkNL7jlVpfhTOoikzdbo=,iv:yYnGpO/vhVNGQPKJsEDO7UCBbbWokQWG3FtlS3U0YV4=,tag:QinbUJPBtqIYYg7N429alw==,type:str]
+          secretName: ENC[AES256_GCM,data:UGtdkRMWigBxLqRnkBu04FUe4d57GgzDssdbiZPrD3QTz59nNynF,iv:x2nIANLgFVhwMeczHhfsznNr2reFHMt3KsUXvRu8A10=,tag:jEkTc4HqRR1powNrJMyCuA==,type:str]
 service:
-    type: ENC[AES256_GCM,data:9JR+2R1/ZM4=,iv:RK+zPODqmUZR2XYlZQyKR6OV/PcFytLn1MlMJlIvdX8=,tag:qexPRQBFdFSSe4/mNX1Bvg==,type:str]
-    nodePort: ENC[AES256_GCM,data:hLUWx/o=,iv:5NRg+XrbNR1WJ93kbnxhe0VOPMxF8Kf9Joj9YIGVvLA=,tag:tCzcDwQiEbWYWQ5ZwqnFpw==,type:int]
+    type: ENC[AES256_GCM,data:G2DBgQ2pAEM=,iv:QqDo9Tf+7CMzKa6w0uFVQ8r/dsP6mX3Lr21p/WmUyP8=,tag:fX20paX8wW5HW8lcnHgHNg==,type:str]
+    nodePort: ENC[AES256_GCM,data:1x/BViM=,iv:fu8kSWLLbXOPTOgngavnDkQjy9g0sLZKOFFFxscogJk=,tag:MocfoTja91wAg6DekPj/Dw==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxRnc0MzU4dEtMOWtYRnVi
-            TERNaHQ2dXBQemt1MkdzdzRmUzludEVic1NzCmVvUTZFcURwR1cyY213em8zTHB6
-            TUZBUDUzRkdpeHh6d29BVVlhSzg4TXcKLS0tIGdYUjl4eTFnOFo3TGFldFlYVTV2
-            UWhXSHVPbFRKUW5XN0RmSDhHMllMNlEK5+g6ZxS+yxLkGNMwT/GoeFaoPy7fFteS
-            7NoxP64yDBaEI59zSto99d1bKuxcGDWLR/1GogyTSw7TBFtafRM9zg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYR3AwbUY0Y1czTXN0YUZG
+            S2F6Z2lkRitSWWFIZDQwWnB1ekFqL2wvb21JCitKalN3cURFdVl1amNmMjFsajNS
+            enl4dFd0Rzl3andMN2dvdFpoQ3hENzAKLS0tIDlUMjFQU0FWYnpsRXFuREhnT25B
+            T3lUYmIxcnExRXdQMXJ6SS9Dci9EQk0KJRiCaY+xOVG3WUxAjvIRpnlaCp747Jtw
+            D/XbgSJVgzLCYrPjgV64bTq+jBStXV/672Ee4WbyP8j0xxjveruX2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-02T10:22:29Z"
-    mac: ENC[AES256_GCM,data:0wDV4/Cb0Fu2NRYPpfMmbvusZj7QQDQC7IkovZZKyGX55OEdB2vLsXUyytSL8Pziv47V+548zpW4x9aGw+lQUeOjaWWFDaTZDKeMM0SSecw8QwThjcACi8MgRz6riVXZarTpiSaZyJvF29vPDnDDXbJ0Eks5N4A8PPcwwq3ZCt4=,iv:ZcDmUSESEcdUbitEcQ4UPoK5BLCWgHgtAYGlL/ftjiw=,tag:IR0BeMumF0oafc9/UwV4zw==,type:str]
+    lastmodified: "2023-05-02T21:31:11Z"
+    mac: ENC[AES256_GCM,data:bgaoXlUooH41lr3tShczp6W/eWJFFc0pei9EFkH4658JDN3q+zgcN/akwj/cMKCRixXhd6TVb8+ssXcNuhb2DLJBC0U3PdGBFYsp0mzF85E6RSBTwiIuiqzz2nspLFdelLv8whqiXg4Vsj5yfg3/iaXG+wZ5b77eRPwpbebO5Do=,iv:vfoLs2YwRerB31ryPwJSHXly4CH03bdjJkAOgq2THsM=,tag:afFyJ/5/Crm3I3drZUOukw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
