Up ui prod version

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:e2G/zaa+,iv:INpwtjpD83/0+zWmIuLyhn8mS+w/kFxF7kv8wkhzuds=,tag:WmaO4t5d5NsKr5Evy+Sr8Q==,type:str]
-    repository: ENC[AES256_GCM,data:rifMAKFW/mieU5Xk9l4dpvv6qzcOIvrHzK/v8tkbXZtl42wKTwc=,iv:FcgMB+NIPKr1jcrs9fZQYYc9PRxYL9JAKfNioLoJQZ8=,tag:FCNZUS52yorZyQ+wvFZ9Lg==,type:str]
+    tag: ENC[AES256_GCM,data:HARjiLF9,iv:WIhWeGNJuw45E/oP/FPszT5+wyIZWIbsHvLFsIIuKIo=,tag:qFzrko3sJgMhxZo9GQHg0A==,type:str]
+    repository: ENC[AES256_GCM,data:8Tx9du2KpUvXWUmy+f8LFznW7H7nYNDxvavTTFi2l2A5UxBjlW0=,iv:XveSX6frUdxG6+5EtBSxAsuB+xkmcjU9ZaU3/y8n/6Q=,tag:kV6p1Fc8ayTRsiePmrnaXw==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:1JDu3g==,iv:w0MvkjgyTonsWoUEMTooxgGucHXacIr1AaULdpOhcWM=,tag:mSKeuGUddmtiVDyXpm8vdQ==,type:bool]
+    enabled: ENC[AES256_GCM,data:aqDrUA==,iv:n7MTQeIrOM+T7httgCnp5Owf2X4R3puS5jsHFXq7G8w=,tag:UfKaualQOHzU4AKPYwtefw==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:Gq8YDV5+N23J8hr58pz/c1UoU5k=,iv:y8r1UTgXXmUpMZ6uD0YDMzj9oYyiWQ7n36kXX9sFyJE=,tag:JrxULtqo2/EpTEw2lvFa3g==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:eB6txFr/gAF6Diby,iv:6Q6qk0E2Xo82AOnBUfQJL3NAwDgnsK8bHjTwWvY2GM4=,tag:kRogokJu7DMTZoZOVBrMIA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:IOG1Ln8v5oInqX+j,iv:U+HDp/FJb+Tc3a4UIROeVxvdBXNFN6Aybyao5tigj+w=,tag:HStrKzdyRYGcW93sweKTSA==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:eeP/Kxa4lkv5KSZ1gAEnp/qywqI=,iv:3xUqxm/7ZDoXx23Zmx1zOqPYe7CR821n8lmru+EDBqA=,tag:ZB2szfQOy3O32U0KKxTBZA==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:EsDzjIKRjDUN+Pb5vG9d0L5APXY=,iv:haaI/ClwUbkyMO+JPqNeZ+KuGuI11NrgdN/oDP9eQGE=,tag:sQ+VwCLULhhB6MuOFEz+5w==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:Jpttu1h60R4iJiSb,iv:uHH/xA7VziQVhSTfSTCS5NSsWG/MFVcv5a24HcocXCY=,tag:ZRBq7PiyK/g62/JKE3LKtw==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:XPbDYasCxsjjcwLF,iv:JIVpXNHa4c7a/F5CBp/Ehag2IxiLp1qjJ3c7in3Xl1s=,tag:ktuZlFSUxMV0dF5HYXGZww==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:fe5GIK+XVLK5+S8RDpoaSKdE33M=,iv:TJYxW8BxCioZPx+KWF9TdZ+kBjfRK+KXINrwsFnW9Xk=,tag:SAOrbLoyQuimJMvtQ5Je3g==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:e3n/UdOiHYO39d7W/UVygUCc/TRBOIrLaNVKWn4=,iv:kJuvaKMSi6me1tZP3bJArSf8Ysbyw0GRVjRw2DCHGnw=,tag:55+tf/3Kp9Xv2wz1UzWnhQ==,type:str]
+        - host: ENC[AES256_GCM,data:lX/Au0Wk19YBGVIZHRz7wDsqAgeWjKy/NZA1BT8=,iv:9uEQRlfKmyBAZdoOUitVh1D2GlNa9gMuiQZIVuSU6H0=,tag:GAqsqAUNUwKzU3Rv3sFDXA==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:Mg==,iv:HR+NFuGavXcNip0Zfn1g6YAg8XbXKgL5WywzRtsPG6Q=,tag:FEV3m8xi9goh578ueHNC6A==,type:str]
-              pathType: ENC[AES256_GCM,data:PCO6YZgVuhp4hGdqCJqfxN6XKoixIA==,iv:tMw750nh3pknV7ny+6rEYW3/90QjN8f3330FYO3fumI=,tag:Ac2lRU7inI40xKEGFsPemg==,type:str]
+            - path: ENC[AES256_GCM,data:Vw==,iv:4IwWS0YItS7VZ3oAx08HUgdCal4PQNJyPvVcQ5L9pAc=,tag:tdc3NhfDY/sJy1AOwGZ1oA==,type:str]
+              pathType: ENC[AES256_GCM,data:tdG2+5AXhN5BADr+43Wz8A1xFkl7Jw==,iv:XznhPatn0BQoPSiSat+bD8bUgAgCeUSbQ5RIVm966bw=,tag:osFr0TNnKB2AOa3dCULVsg==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:Q5PGcWrudE6twIRbXXhbkNL7jlVpfhTOoikzdbo=,iv:yYnGpO/vhVNGQPKJsEDO7UCBbbWokQWG3FtlS3U0YV4=,tag:QinbUJPBtqIYYg7N429alw==,type:str]
-          secretName: ENC[AES256_GCM,data:UGtdkRMWigBxLqRnkBu04FUe4d57GgzDssdbiZPrD3QTz59nNynF,iv:x2nIANLgFVhwMeczHhfsznNr2reFHMt3KsUXvRu8A10=,tag:jEkTc4HqRR1powNrJMyCuA==,type:str]
+            - ENC[AES256_GCM,data:niicdXHHyAwTJeC1A2umOPOWVk/uJoXLAybbAeU=,iv:mBlc1SzZbxZIBfp6GJe/VrRpvTKtKJ/xPU3xSaMniOY=,tag:79E2oU52UzAW9SRpnaJi/g==,type:str]
+          secretName: ENC[AES256_GCM,data:rNrfNvDdtKuoxNL10RsNkYluXBuTtm/Us6y0+9ykD3rBHPw80+mI,iv:0t/eHjvmr/rNIS/V4rz45VzfvoqCwNC96dMCk5gOHKE=,tag:nTzUN8kC6mSDgBVDToHkng==,type:str]
 service:
-    type: ENC[AES256_GCM,data:G2DBgQ2pAEM=,iv:QqDo9Tf+7CMzKa6w0uFVQ8r/dsP6mX3Lr21p/WmUyP8=,tag:fX20paX8wW5HW8lcnHgHNg==,type:str]
-    nodePort: ENC[AES256_GCM,data:1x/BViM=,iv:fu8kSWLLbXOPTOgngavnDkQjy9g0sLZKOFFFxscogJk=,tag:MocfoTja91wAg6DekPj/Dw==,type:int]
+    type: ENC[AES256_GCM,data:L8FX5G9qVCk=,iv:tl/hCg4y1APZCNYCSENufANUEkFoEw2++K/2ZYXj2FE=,tag:Bh+q8ozPiHYh7Ynf78Cbpw==,type:str]
+    nodePort: ENC[AES256_GCM,data:+OctjYA=,iv:lFpTW/8hPdaTBHRJd/RumjKjbTQGb6T2CCK1cKkPsKg=,tag:FEuAVCCdYtk+pA7RAJGQcQ==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYR3AwbUY0Y1czTXN0YUZG
-            S2F6Z2lkRitSWWFIZDQwWnB1ekFqL2wvb21JCitKalN3cURFdVl1amNmMjFsajNS
-            enl4dFd0Rzl3andMN2dvdFpoQ3hENzAKLS0tIDlUMjFQU0FWYnpsRXFuREhnT25B
-            T3lUYmIxcnExRXdQMXJ6SS9Dci9EQk0KJRiCaY+xOVG3WUxAjvIRpnlaCp747Jtw
-            D/XbgSJVgzLCYrPjgV64bTq+jBStXV/672Ee4WbyP8j0xxjveruX2g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnWVpjcUp6eEVCd3kzUVRa
+            azQzcDQwU1E3NDNSMi9yd0lGVWxDaEdYTmtZCnMveURLRVpXMEw2b0xnVWFLMkxo
+            ZGNZRzBQVFZFRENoYXVKU1pyOGI4UDAKLS0tIEFETUFqQkN4L2xtNEg4UHZzVlBZ
+            M2paVVdzeE1BaVhMVXpNdUNZbTA4TlUKj6aSsKd+ewc7tbhmyopaekzJoqfvWbVj
+            GN1B3gqboh2T7hcqubOHuxy8cRKDgb/OQrdR6Z96MYWMp6GZCJTfHg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-02T21:31:11Z"
-    mac: ENC[AES256_GCM,data:bgaoXlUooH41lr3tShczp6W/eWJFFc0pei9EFkH4658JDN3q+zgcN/akwj/cMKCRixXhd6TVb8+ssXcNuhb2DLJBC0U3PdGBFYsp0mzF85E6RSBTwiIuiqzz2nspLFdelLv8whqiXg4Vsj5yfg3/iaXG+wZ5b77eRPwpbebO5Do=,iv:vfoLs2YwRerB31ryPwJSHXly4CH03bdjJkAOgq2THsM=,tag:afFyJ/5/Crm3I3drZUOukw==,type:str]
+    lastmodified: "2023-05-02T21:50:03Z"
+    mac: ENC[AES256_GCM,data:7cnqVh8o6Bg7p98hglf/UWyD6T6dkV1AofePBAlR/r64IUMYGkqiwF8znYmq7QeQE4lLcX6r9HkkNnmEIF07ELyxMCvl68ea3qHAvma4FloudnIsrWWPX1Svhb83FqD2+77i5P7lRKHPDf+KoI1p5NGLGHApky14zWe1QtYnehI=,iv:gWcP9e4usImVXveI9DqBJfdTFsJQNoe/je26U1gYOn4=,tag:QzspZ6kKSO200hPUaswcRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
