Up ui prod version && fix create button differently

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:HARjiLF9,iv:WIhWeGNJuw45E/oP/FPszT5+wyIZWIbsHvLFsIIuKIo=,tag:qFzrko3sJgMhxZo9GQHg0A==,type:str]
-    repository: ENC[AES256_GCM,data:8Tx9du2KpUvXWUmy+f8LFznW7H7nYNDxvavTTFi2l2A5UxBjlW0=,iv:XveSX6frUdxG6+5EtBSxAsuB+xkmcjU9ZaU3/y8n/6Q=,tag:kV6p1Fc8ayTRsiePmrnaXw==,type:str]
+    tag: ENC[AES256_GCM,data:fICl1ueC,iv:+PzKGTmg2Xm4pZzwG8707agAwaTVG/n7sfdf0XlvVhk=,tag:FigHQMZ30oeN1ffRKQdQnw==,type:str]
+    repository: ENC[AES256_GCM,data:ic5Mfv7iYeHLLLGyoVJOZhncX++83gxRfqlArt8c3XiyvNMBs8Q=,iv:Q35lojCxzjtOxwStAK0HB9mI9FQ2gjfASCYP6uCpmGU=,tag:glVIJtHphGqJ7F60PTUzlg==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:aqDrUA==,iv:n7MTQeIrOM+T7httgCnp5Owf2X4R3puS5jsHFXq7G8w=,tag:UfKaualQOHzU4AKPYwtefw==,type:bool]
+    enabled: ENC[AES256_GCM,data:mQNFMg==,iv:Hv8Rhk5RtYFwoLvwJb2F+t6WQ9ui7KYR7ykcXQPsZiA=,tag:MyGmsXtPorR2uv/bjYOy+g==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:EsDzjIKRjDUN+Pb5vG9d0L5APXY=,iv:haaI/ClwUbkyMO+JPqNeZ+KuGuI11NrgdN/oDP9eQGE=,tag:sQ+VwCLULhhB6MuOFEz+5w==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:Jpttu1h60R4iJiSb,iv:uHH/xA7VziQVhSTfSTCS5NSsWG/MFVcv5a24HcocXCY=,tag:ZRBq7PiyK/g62/JKE3LKtw==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:XPbDYasCxsjjcwLF,iv:JIVpXNHa4c7a/F5CBp/Ehag2IxiLp1qjJ3c7in3Xl1s=,tag:ktuZlFSUxMV0dF5HYXGZww==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:fe5GIK+XVLK5+S8RDpoaSKdE33M=,iv:TJYxW8BxCioZPx+KWF9TdZ+kBjfRK+KXINrwsFnW9Xk=,tag:SAOrbLoyQuimJMvtQ5Je3g==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:U0XT1tCOV5suIr4UmZ8Bno4nx28=,iv:89vY9oyCCwVL46CysnRmxwcW8UpKh0z8CKJREclJ83c=,tag:0tz9/oPz1HkFZ5VwhmVP7A==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:NddjM3zeVhrptbDz,iv:hoxNa0hNMeQ+ZP4PRgRyOQp6hFSQ98/YXzrgIH78e4o=,tag:5hiUSf2BQqAPSbDYQX8JaA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:c3qM+gBPwi6jBTh2,iv:S3qqk0k1HXTspaFFCOHobWUB0rrfYexUFwjnLJGftbg=,tag:WbdiBsuqkDYyBnW370lmzg==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:VZooCc58RN4VtyIv2N17SYUmjms=,iv:ljyK2imD3fwEgnreDDCicbMCSzE6CadJeB+ClHpPXjM=,tag:hUADKg48FuEKy5t2SNncCA==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:lX/Au0Wk19YBGVIZHRz7wDsqAgeWjKy/NZA1BT8=,iv:9uEQRlfKmyBAZdoOUitVh1D2GlNa9gMuiQZIVuSU6H0=,tag:GAqsqAUNUwKzU3Rv3sFDXA==,type:str]
+        - host: ENC[AES256_GCM,data:HVuyzczX2eE0wg9QaIM0V4Qdmxnols7aEXeabSg=,iv:K9q55jk67PnAcHjmSVi6umXsR8p5l4B4kVYV+TBn3i4=,tag:rQEk+7XmdPsyOeJev57rWg==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:Vw==,iv:4IwWS0YItS7VZ3oAx08HUgdCal4PQNJyPvVcQ5L9pAc=,tag:tdc3NhfDY/sJy1AOwGZ1oA==,type:str]
-              pathType: ENC[AES256_GCM,data:tdG2+5AXhN5BADr+43Wz8A1xFkl7Jw==,iv:XznhPatn0BQoPSiSat+bD8bUgAgCeUSbQ5RIVm966bw=,tag:osFr0TNnKB2AOa3dCULVsg==,type:str]
+            - path: ENC[AES256_GCM,data:Ww==,iv:g9OHTAQe8i/80OW1YHyElPWgx2n4Zst6bPbrnROT8NA=,tag:lOtL/hxbk/W1+c1DWWjTJQ==,type:str]
+              pathType: ENC[AES256_GCM,data:+IURRxXd7tmcuJuSVE+o4VDTdiKokQ==,iv:ugAEXJcqb2DoBRPl89Y7Vb2eBwpikdZeDagJsWDWaeY=,tag:2j8Vmp9v2OhK5nHy3WiLug==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:niicdXHHyAwTJeC1A2umOPOWVk/uJoXLAybbAeU=,iv:mBlc1SzZbxZIBfp6GJe/VrRpvTKtKJ/xPU3xSaMniOY=,tag:79E2oU52UzAW9SRpnaJi/g==,type:str]
-          secretName: ENC[AES256_GCM,data:rNrfNvDdtKuoxNL10RsNkYluXBuTtm/Us6y0+9ykD3rBHPw80+mI,iv:0t/eHjvmr/rNIS/V4rz45VzfvoqCwNC96dMCk5gOHKE=,tag:nTzUN8kC6mSDgBVDToHkng==,type:str]
+            - ENC[AES256_GCM,data:40TKfTvNfN7u+0nENxzvP3PSNkdSdN274QM7Jvo=,iv:ivUbXzyYjM8ojwp6zz6ycBjRgf0Mish+k2f+2pRsrGY=,tag:j0ABBaWqHFcrcTpHLxbHWg==,type:str]
+          secretName: ENC[AES256_GCM,data:cAaIZAuKwCCTwvhfzZghtrc+hGE4SsJJGR+/pRRawKrpGR+Omys/,iv:ONcUsyb3lJ4xl15EKGHpAvg4PAj3bPKzUmfTcrmuGTs=,tag:H6I+YtfBfGrsgZtzjOjybg==,type:str]
 service:
-    type: ENC[AES256_GCM,data:L8FX5G9qVCk=,iv:tl/hCg4y1APZCNYCSENufANUEkFoEw2++K/2ZYXj2FE=,tag:Bh+q8ozPiHYh7Ynf78Cbpw==,type:str]
-    nodePort: ENC[AES256_GCM,data:+OctjYA=,iv:lFpTW/8hPdaTBHRJd/RumjKjbTQGb6T2CCK1cKkPsKg=,tag:FEuAVCCdYtk+pA7RAJGQcQ==,type:int]
+    type: ENC[AES256_GCM,data:GTB5vOKBYPw=,iv:OI5kNkNzlvY2lOCgIaOWuehtPsP+Z0F/aQgRjusuLZA=,tag:w+R0EVW4/t69NN5JGYlJsg==,type:str]
+    nodePort: ENC[AES256_GCM,data:e8oSSzg=,iv:XhIIuf0U7kR6iR+fQSCxi5IvbpMTG0uAHrPqMZcbSHs=,tag:BYww2cbY5Akg6SBNY7AoWg==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnWVpjcUp6eEVCd3kzUVRa
-            azQzcDQwU1E3NDNSMi9yd0lGVWxDaEdYTmtZCnMveURLRVpXMEw2b0xnVWFLMkxo
-            ZGNZRzBQVFZFRENoYXVKU1pyOGI4UDAKLS0tIEFETUFqQkN4L2xtNEg4UHZzVlBZ
-            M2paVVdzeE1BaVhMVXpNdUNZbTA4TlUKj6aSsKd+ewc7tbhmyopaekzJoqfvWbVj
-            GN1B3gqboh2T7hcqubOHuxy8cRKDgb/OQrdR6Z96MYWMp6GZCJTfHg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TVYrVWhDSTU3UFVnRWwr
+            ZlhSdlFLelJ3NVpUV3NOWDVwS04xYy9Md3ljCjlCWnA2OUI4UDladXU5ZEd2TURJ
+            NDN6YXhVZzErWUxCZmtld0o4SDllblkKLS0tIHZQeUsvaWIvNWx6VXF1cG02WU8z
+            bGhFd3Bqc0RLY04rRXlrVVdkbjJxWVEK8zc8gKQ6zcr2xwHkJ6RHdy579Rpfj1+3
+            HgFT8M7sTHrkia78DyADJNbkMnzpDhMh3AiUeaNHCBpT+yqPHbYhVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-02T21:50:03Z"
-    mac: ENC[AES256_GCM,data:7cnqVh8o6Bg7p98hglf/UWyD6T6dkV1AofePBAlR/r64IUMYGkqiwF8znYmq7QeQE4lLcX6r9HkkNnmEIF07ELyxMCvl68ea3qHAvma4FloudnIsrWWPX1Svhb83FqD2+77i5P7lRKHPDf+KoI1p5NGLGHApky14zWe1QtYnehI=,iv:gWcP9e4usImVXveI9DqBJfdTFsJQNoe/je26U1gYOn4=,tag:QzspZ6kKSO200hPUaswcRg==,type:str]
+    lastmodified: "2023-05-02T21:59:34Z"
+    mac: ENC[AES256_GCM,data:yQiQkQ5aABSYPz8olADEU02ijsygCyvxmB/skkQ8mq77IQhpgsJiK9Yr4BiAyfJWSxAI8U/wzNtaBWLfYI4E9c/H6KDr0JHrDGC78Hk0cSJR9NvrJqY4Zgw0yn6ENwugIo4IUHqK/z+2j8msBGN1pAsZVXr4o0gaTN2Rms+UNv0=,iv:FfL/JynJNEvWVVqzIuqw5RFoX90QU2KbPUc19+1zYXM=,tag:EYgQrexVfxYl2q2Fuy5AZg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
