Up ui prod version && fix create button finally

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:fICl1ueC,iv:+PzKGTmg2Xm4pZzwG8707agAwaTVG/n7sfdf0XlvVhk=,tag:FigHQMZ30oeN1ffRKQdQnw==,type:str]
-    repository: ENC[AES256_GCM,data:ic5Mfv7iYeHLLLGyoVJOZhncX++83gxRfqlArt8c3XiyvNMBs8Q=,iv:Q35lojCxzjtOxwStAK0HB9mI9FQ2gjfASCYP6uCpmGU=,tag:glVIJtHphGqJ7F60PTUzlg==,type:str]
+    tag: ENC[AES256_GCM,data:DIox0eGV,iv:zQ2kNM3T4+ZLW+QBUkhOeGlxaDq1/iu1azuGn+mng30=,tag:wKaeaFHHgN3l6hw95FVGzQ==,type:str]
+    repository: ENC[AES256_GCM,data:8WyCYGvrlH6aEuYHE7scb+K9DN38oC3RZdFDd1y31oJVioyO03U=,iv:B/fm+IAV3S2+/eFVaTIbX2JrDwd+o+ssgTC05TCnavM=,tag:YwnjvyiOXFMp+i6jJRXb2g==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:mQNFMg==,iv:Hv8Rhk5RtYFwoLvwJb2F+t6WQ9ui7KYR7ykcXQPsZiA=,tag:MyGmsXtPorR2uv/bjYOy+g==,type:bool]
+    enabled: ENC[AES256_GCM,data:5S2bNQ==,iv:sWV46Rw70fcdtYfT41gfu1T4pP+DgBAgbnx7cOD96Tw=,tag:hM7ge3GRUqT7XIp6CKD0bw==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:U0XT1tCOV5suIr4UmZ8Bno4nx28=,iv:89vY9oyCCwVL46CysnRmxwcW8UpKh0z8CKJREclJ83c=,tag:0tz9/oPz1HkFZ5VwhmVP7A==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:NddjM3zeVhrptbDz,iv:hoxNa0hNMeQ+ZP4PRgRyOQp6hFSQ98/YXzrgIH78e4o=,tag:5hiUSf2BQqAPSbDYQX8JaA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:c3qM+gBPwi6jBTh2,iv:S3qqk0k1HXTspaFFCOHobWUB0rrfYexUFwjnLJGftbg=,tag:WbdiBsuqkDYyBnW370lmzg==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:VZooCc58RN4VtyIv2N17SYUmjms=,iv:ljyK2imD3fwEgnreDDCicbMCSzE6CadJeB+ClHpPXjM=,tag:hUADKg48FuEKy5t2SNncCA==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:iB7uZviDm9zQT0yRrJIEwJ3slak=,iv:VVlVHZBvZWf6OZqf9aPGBDyUXtlvJnEBtZizN1QAg/M=,tag:2nLykHDCxTEZiQoZyvinTA==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:u1Ook5r4ppCX8/RF,iv:r+rCyS34j9h2b7vWx1KlhLJdIfQ12G1H4effV/ZC7JI=,tag:NtZ3KwI+JXs/T5NGrxc3kA==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:WLcSYSIOOGmod5+m,iv:iDuNwux6ydX1Unknbq3rC1geRbVlKhfhUP6d5S9874g=,tag:RZ2ITTYJNPN2yNvVlBXi3w==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:8uKdm6j6knSCCd+DBKh9SLhLQVg=,iv:T+Eo4oHWSGd7ZOkUroTckFz6N+/xGHfOy8o2JAe26lc=,tag:kLz069fD1w2hrwG6kVtvEg==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:HVuyzczX2eE0wg9QaIM0V4Qdmxnols7aEXeabSg=,iv:K9q55jk67PnAcHjmSVi6umXsR8p5l4B4kVYV+TBn3i4=,tag:rQEk+7XmdPsyOeJev57rWg==,type:str]
+        - host: ENC[AES256_GCM,data:pZmVZLOwT9TueygChMI6uPym7hLqzTpVkbUx2mM=,iv:OvxjWsbk5/8dOArpMjzElbLI60Q0BucEQ/lYYOyN5LI=,tag:BOD/o2noG42mlbmvpVmlQw==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:Ww==,iv:g9OHTAQe8i/80OW1YHyElPWgx2n4Zst6bPbrnROT8NA=,tag:lOtL/hxbk/W1+c1DWWjTJQ==,type:str]
-              pathType: ENC[AES256_GCM,data:+IURRxXd7tmcuJuSVE+o4VDTdiKokQ==,iv:ugAEXJcqb2DoBRPl89Y7Vb2eBwpikdZeDagJsWDWaeY=,tag:2j8Vmp9v2OhK5nHy3WiLug==,type:str]
+            - path: ENC[AES256_GCM,data:BQ==,iv:zF3/rNxPD0kelMdCsjfI14C4jH+AEH2jwfdRp0duZAA=,tag:C2KSezFTvFavuOO5yB4gDg==,type:str]
+              pathType: ENC[AES256_GCM,data:cYRpnCAS5QOIxKGQXQXvQKuZLLOLLA==,iv:DcCKpfZzdxExSq5hghr7jkxx6MkSn5b3SIrZBoLvXTU=,tag:IKlCfZya6mOlNIwxj5bx0Q==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:40TKfTvNfN7u+0nENxzvP3PSNkdSdN274QM7Jvo=,iv:ivUbXzyYjM8ojwp6zz6ycBjRgf0Mish+k2f+2pRsrGY=,tag:j0ABBaWqHFcrcTpHLxbHWg==,type:str]
-          secretName: ENC[AES256_GCM,data:cAaIZAuKwCCTwvhfzZghtrc+hGE4SsJJGR+/pRRawKrpGR+Omys/,iv:ONcUsyb3lJ4xl15EKGHpAvg4PAj3bPKzUmfTcrmuGTs=,tag:H6I+YtfBfGrsgZtzjOjybg==,type:str]
+            - ENC[AES256_GCM,data:4RtrjoJupmY/jNHMHfF5Kmk7cR/Jd+FGfsPblSw=,iv:naZyCX4DPHRSNgSNlOxWgShQPF7QfNGm4//6xvkGg6M=,tag:ML9O8ImZv8HU2f9s7W4AUA==,type:str]
+          secretName: ENC[AES256_GCM,data:xBVVqCOfy7mZ0iSdfZKu6zsWLUMfmHwLBvmET4UpvUyDRv07bdk4,iv:2klsSYtaXe9rFXQucYtXYL2KX3S1X66ShV8oJ7ZniC4=,tag:oov2aeojr3YRiBQrfKniUg==,type:str]
 service:
-    type: ENC[AES256_GCM,data:GTB5vOKBYPw=,iv:OI5kNkNzlvY2lOCgIaOWuehtPsP+Z0F/aQgRjusuLZA=,tag:w+R0EVW4/t69NN5JGYlJsg==,type:str]
-    nodePort: ENC[AES256_GCM,data:e8oSSzg=,iv:XhIIuf0U7kR6iR+fQSCxi5IvbpMTG0uAHrPqMZcbSHs=,tag:BYww2cbY5Akg6SBNY7AoWg==,type:int]
+    type: ENC[AES256_GCM,data:GuNXbG0OX9E=,iv:A7Tm/E9v0R+7SbIvnkF0gARMmifn1nS+ySODZKJp+nI=,tag:uxTe18bKFPcmFmt6dtc8dA==,type:str]
+    nodePort: ENC[AES256_GCM,data:6kXWAAU=,iv:1OxFmNTE2Phm7ngTIzeYgJ5fyNt7Gslfyf+kjUXnJdg=,tag:/E289jTrCK+tmdEMXHcjyg==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TVYrVWhDSTU3UFVnRWwr
-            ZlhSdlFLelJ3NVpUV3NOWDVwS04xYy9Md3ljCjlCWnA2OUI4UDladXU5ZEd2TURJ
-            NDN6YXhVZzErWUxCZmtld0o4SDllblkKLS0tIHZQeUsvaWIvNWx6VXF1cG02WU8z
-            bGhFd3Bqc0RLY04rRXlrVVdkbjJxWVEK8zc8gKQ6zcr2xwHkJ6RHdy579Rpfj1+3
-            HgFT8M7sTHrkia78DyADJNbkMnzpDhMh3AiUeaNHCBpT+yqPHbYhVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzVjdJN0tpL1JTUU9DY3c2
+            Y245enVLOFJqYVZhUkxTZ0J2ZW5vc3JWdkFvCnpNK0hpOWJ3SUlQVzZwWnFkWDJs
+            Q3o4Vi9QNVhnZE9CV0xBdEtLV1lXd1EKLS0tIGEzdGw1Q0hEOGEwU1lxUS82amxP
+            VUcxS0RzVkZuRnFPNmFycVpkREh5a1EKvBU8lY4lsD0tWCtjaN+i8L1epVoJdIHn
+            kBQJqgh3xmitVIJ8hCi6Jn2qaIPKcFXWhNX/vDTyojWpWsy7JknF6Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-02T21:59:34Z"
-    mac: ENC[AES256_GCM,data:yQiQkQ5aABSYPz8olADEU02ijsygCyvxmB/skkQ8mq77IQhpgsJiK9Yr4BiAyfJWSxAI8U/wzNtaBWLfYI4E9c/H6KDr0JHrDGC78Hk0cSJR9NvrJqY4Zgw0yn6ENwugIo4IUHqK/z+2j8msBGN1pAsZVXr4o0gaTN2Rms+UNv0=,iv:FfL/JynJNEvWVVqzIuqw5RFoX90QU2KbPUc19+1zYXM=,tag:EYgQrexVfxYl2q2Fuy5AZg==,type:str]
+    lastmodified: "2023-05-02T22:05:53Z"
+    mac: ENC[AES256_GCM,data:d3Hb62O6zFRwBAfBAQztiENYITiIZIpMyZsx4h48FN4pxpAQVoG/ZI8z0ZoReGtLsoeN4oqkApt7NbMm1hLllo8KpunLdooV/WskV5db90VGvOTHYOJeuZAvlC0He2xu5M3OHA20/TFjLVHWl0Ru5YrCjBgyabRbdUEktsNBwQk=,iv:GqVe0yfdFlVVgBdLkd/3qU4HMv4nMK8tFmWPDgy9oWI=,tag:tDppIcIatKDBVYpBndEveA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
