Some UI fixes including huge white space in editor; sort logos by a new field created_at on fetch; code style

--- a/ops/helm/values/logo-ui-prod.yaml
+++ b/ops/helm/values/logo-ui-prod.yaml
@@ -1,25 +1,25 @@
 image:
-    tag: ENC[AES256_GCM,data:DIox0eGV,iv:zQ2kNM3T4+ZLW+QBUkhOeGlxaDq1/iu1azuGn+mng30=,tag:wKaeaFHHgN3l6hw95FVGzQ==,type:str]
-    repository: ENC[AES256_GCM,data:8WyCYGvrlH6aEuYHE7scb+K9DN38oC3RZdFDd1y31oJVioyO03U=,iv:B/fm+IAV3S2+/eFVaTIbX2JrDwd+o+ssgTC05TCnavM=,tag:YwnjvyiOXFMp+i6jJRXb2g==,type:str]
+    tag: ENC[AES256_GCM,data:NEbkUL+Q,iv:Q2xFDJVMKwWC3K6P9qpw1dTG1VwmCukFo86Dz1jrQGQ=,tag:dYli57Pbs6QSXFbG5gi0iA==,type:str]
+    repository: ENC[AES256_GCM,data:6YwxeUdIWxW33u/0peKp5Cdv/6q3vYrNX0HCzD0Hpptbk/Dmsss=,iv:MO4xfRJHVk0cAHOvdxJ90zHqI4kfaOoGRcj7af9w9jM=,tag:boi/bN8qMHMyljabXWtGFA==,type:str]
 ingress:
-    enabled: ENC[AES256_GCM,data:5S2bNQ==,iv:sWV46Rw70fcdtYfT41gfu1T4pP+DgBAgbnx7cOD96Tw=,tag:hM7ge3GRUqT7XIp6CKD0bw==,type:bool]
+    enabled: ENC[AES256_GCM,data:/QU9hA==,iv:vRyuj8FD2arOo7EiOr+PLXWhEqZSZyYkCcWu+83V7r8=,tag:ZqIc064Z6KqXuiynHnifOw==,type:bool]
     annotations:
-        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:iB7uZviDm9zQT0yRrJIEwJ3slak=,iv:VVlVHZBvZWf6OZqf9aPGBDyUXtlvJnEBtZizN1QAg/M=,tag:2nLykHDCxTEZiQoZyvinTA==,type:str]
-        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:u1Ook5r4ppCX8/RF,iv:r+rCyS34j9h2b7vWx1KlhLJdIfQ12G1H4effV/ZC7JI=,tag:NtZ3KwI+JXs/T5NGrxc3kA==,type:str]
-        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:WLcSYSIOOGmod5+m,iv:iDuNwux6ydX1Unknbq3rC1geRbVlKhfhUP6d5S9874g=,tag:RZ2ITTYJNPN2yNvVlBXi3w==,type:str]
-        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:8uKdm6j6knSCCd+DBKh9SLhLQVg=,iv:T+Eo4oHWSGd7ZOkUroTckFz6N+/xGHfOy8o2JAe26lc=,tag:kLz069fD1w2hrwG6kVtvEg==,type:str]
+        ingress.alb.yc.io/subnets: ENC[AES256_GCM,data:nyeRW8ueHYr4x43UgadGFD6tZSQ=,iv:CYTnGRIK1QNsS+KiwziDhfSMMEjlOu7fOk+5yPTFEUE=,tag:Dwld0QWxGR5ABW0LxgwCLQ==,type:str]
+        ingress.alb.yc.io/external-ipv4-address: ENC[AES256_GCM,data:jpEnH87sxkX7rAxl,iv:KoJ3O5k416U4Jv/9SJvt+2SyswXi9KlYzYBrbH2BONs=,tag:IBLe7p24BGQwxqdLU26e8w==,type:str]
+        ingress.alb.yc.io/group-name: ENC[AES256_GCM,data:osy2jg9MSLUurVZt,iv:geiouWmGrnHvYbf1C+I0S26VW6drSQdJaWkj6PRuX1w=,tag:GVe40cYu3orZHGXaWscJEw==,type:str]
+        ingress.alb.yc.io/security-groups: ENC[AES256_GCM,data:9zrtR5Slsyfioq0csaKY/2sGzwc=,iv:suOqhhOucjV25XdYHfVnHbb8ntSeZThvzaxwwwADL9I=,tag:8Q6mAgR02zd41c6EismFlA==,type:str]
     hosts:
-        - host: ENC[AES256_GCM,data:pZmVZLOwT9TueygChMI6uPym7hLqzTpVkbUx2mM=,iv:OvxjWsbk5/8dOArpMjzElbLI60Q0BucEQ/lYYOyN5LI=,tag:BOD/o2noG42mlbmvpVmlQw==,type:str]
+        - host: ENC[AES256_GCM,data:u0ac5KqW/gtG8cmeVeoV5yynzReb9xiGL2XcG6M=,iv:HM/pJWYjICsrMasGqLbPJuGfFICBaojDKfZfGwkPT+s=,tag:WZAVdBwx4UvvrNJdrnPjtw==,type:str]
           paths:
-            - path: ENC[AES256_GCM,data:BQ==,iv:zF3/rNxPD0kelMdCsjfI14C4jH+AEH2jwfdRp0duZAA=,tag:C2KSezFTvFavuOO5yB4gDg==,type:str]
-              pathType: ENC[AES256_GCM,data:cYRpnCAS5QOIxKGQXQXvQKuZLLOLLA==,iv:DcCKpfZzdxExSq5hghr7jkxx6MkSn5b3SIrZBoLvXTU=,tag:IKlCfZya6mOlNIwxj5bx0Q==,type:str]
+            - path: ENC[AES256_GCM,data:LQ==,iv:yRdQpgYq43S97Ttx+IBgyAh1ZoU+qFA7ATAdajhVJdU=,tag:4SbgYEOOG8EBqUVaDKRwjg==,type:str]
+              pathType: ENC[AES256_GCM,data:rSe0Pdoy1KfIktcayo/zeKePztnJVA==,iv:g2jEiwTG1VGbcP0+Ik1HN/fwvG17Pk/jLtmVdL6fMLQ=,tag:2GP6NFsAS1MF+zI7i1x3lA==,type:str]
     tls:
         - hosts:
-            - ENC[AES256_GCM,data:4RtrjoJupmY/jNHMHfF5Kmk7cR/Jd+FGfsPblSw=,iv:naZyCX4DPHRSNgSNlOxWgShQPF7QfNGm4//6xvkGg6M=,tag:ML9O8ImZv8HU2f9s7W4AUA==,type:str]
-          secretName: ENC[AES256_GCM,data:xBVVqCOfy7mZ0iSdfZKu6zsWLUMfmHwLBvmET4UpvUyDRv07bdk4,iv:2klsSYtaXe9rFXQucYtXYL2KX3S1X66ShV8oJ7ZniC4=,tag:oov2aeojr3YRiBQrfKniUg==,type:str]
+            - ENC[AES256_GCM,data:k60asryYTZW0zT+RlqbgSJRDTCHA6M2z+e2kDWY=,iv:jgFiOdXO1ghFHavWpsCHEA4xeq22fABkekZyxSJLBfw=,tag:ZrfUfz8w94KtPI2Hpk/F0Q==,type:str]
+          secretName: ENC[AES256_GCM,data:EbC2rF6GXL/4zAt7/exQqZJq3vrX7GzKmdn6d0UpfrJkNdW/vgFX,iv:Pz7MNmWkrUzWcSDKXjoU/D+cm90+QfeSZbfH1SrydY4=,tag:cXePJRM8EQm0hcY4RSGHdA==,type:str]
 service:
-    type: ENC[AES256_GCM,data:GuNXbG0OX9E=,iv:A7Tm/E9v0R+7SbIvnkF0gARMmifn1nS+ySODZKJp+nI=,tag:uxTe18bKFPcmFmt6dtc8dA==,type:str]
-    nodePort: ENC[AES256_GCM,data:6kXWAAU=,iv:1OxFmNTE2Phm7ngTIzeYgJ5fyNt7Gslfyf+kjUXnJdg=,tag:/E289jTrCK+tmdEMXHcjyg==,type:int]
+    type: ENC[AES256_GCM,data:HcAZ2pvIQ7w=,iv:gSUU6okCwStXiaUE4FZjamG4uAJSszjuHiC8v0b0TU4=,tag:Hs8L57j7KZWAWNnR8mSvkQ==,type:str]
+    nodePort: ENC[AES256_GCM,data:PRpswrk=,iv:U7ofEEaDRnce7rZxADiScblVoeXROcC87u1pNt4zEEA=,tag:tn3/gBXE+jxDrkLDX4uClg==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1pj5elnqgt6c4yaatfpv652c8kcn4pwty2ez5l8y7e0rwh9e0gcpqkjj4xn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzVjdJN0tpL1JTUU9DY3c2
-            Y245enVLOFJqYVZhUkxTZ0J2ZW5vc3JWdkFvCnpNK0hpOWJ3SUlQVzZwWnFkWDJs
-            Q3o4Vi9QNVhnZE9CV0xBdEtLV1lXd1EKLS0tIGEzdGw1Q0hEOGEwU1lxUS82amxP
-            VUcxS0RzVkZuRnFPNmFycVpkREh5a1EKvBU8lY4lsD0tWCtjaN+i8L1epVoJdIHn
-            kBQJqgh3xmitVIJ8hCi6Jn2qaIPKcFXWhNX/vDTyojWpWsy7JknF6Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxbVludnc5Z1NPMGhyVFgz
+            aERMdGhzbkRXK0syeG94YU1xNEIyVzBneUNZCk5EVFk0WWxhYkVmSXQwU3ZhK0o1
+            UHJubXl1UXcrVzZ6ZUl5RGRxUXdFaWsKLS0tIEF3SkJTc3duR01kUC9vTlNyeHYr
+            SFFMZTd4RE13aFBobUlPcFlUUTRaYzgK2wzA4A5V8KishP8tdQ8lx3Al0PZMO7AW
+            Qna5YlistEwLeqQ8+AGDD2TthFHHD2CdwzFD4u9Wpzj2k7lnZ7fqjw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-02T22:05:53Z"
-    mac: ENC[AES256_GCM,data:d3Hb62O6zFRwBAfBAQztiENYITiIZIpMyZsx4h48FN4pxpAQVoG/ZI8z0ZoReGtLsoeN4oqkApt7NbMm1hLllo8KpunLdooV/WskV5db90VGvOTHYOJeuZAvlC0He2xu5M3OHA20/TFjLVHWl0Ru5YrCjBgyabRbdUEktsNBwQk=,iv:GqVe0yfdFlVVgBdLkd/3qU4HMv4nMK8tFmWPDgy9oWI=,tag:tDppIcIatKDBVYpBndEveA==,type:str]
+    lastmodified: "2023-05-03T21:56:13Z"
+    mac: ENC[AES256_GCM,data:BlH/XkZr+2j6yjzLiTMSF2QexsUbXHiDUJihA8fsNqBHooBx0Ujxa/4eaTyFQE/PV5wOpfVCmtTzhh1G2la4oZuOdbsi+py93M7MKcZpABz1K2Gy63dZl3T0rul31H0nxvA9RUmeul6mqsQBcP38qKuc/0/43GQ+aYmvu8OY2b0=,iv:c6VfX1m8UfC877H+qNmaXTFI1Bgbwp2AEM7AYSrNDoU=,tag:/r/fl6/xrlf75rqBowvdkg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
